# key-binder

./: .gitignore  Cargo.toml  README.md
resources/: config.toml
src/: main.rs
src/gui/: app.rs
src/key/: key_enums.rs  key_func.rs  mod.rs
src/key/win/: mod.rs  win_func.rs
