[package]
edition = "2021"
name = "key-binder"
version = "0.1.0"
description = "key event listener & simulator for windows OS"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.5.7"
once_cell = "1.9.0"
strum = {version = "0.24.0", features = ["derive"]}
strum_macros = "0.24.0"
chrono = "0.4"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }

[dependencies.windows]
features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse"
]
version = "0.39.0"
